--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "nuxt": "^4.0.3",
     "vue": "^3.5.20",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vuex": "^4.1.0"
   }
 }
