--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -16,6 +16,7 @@
     "nuxt": "^4.0.3",
     "vue": "^3.5.20",
     "vue-router": "^4.5.1",
-    "vuex": "^4.1.0"
+    "@pinia/nuxt": "^0.5.1",
+    "pinia": "^2.2.6"
   }
 }
